# Evil-Nightreign

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
data/curated/: accessories.json  characters.json  effects.json  goods.json  magic.json  mode_scaling.json  nightlords.json  npcs.json  relic_effect_magnitudes.json  relic_reference.json  relics.json  sword_arts.json  vessels.json  weapon_affixes.json
data/ground_truth/: README.md  attack_rating.json  spell_curve_recluse.json  spell_scaling.json
docs/: CALIBRATION.md  ROADMAP.md  TODO.md  build-math-pdf.sh  calibration.md  deploy.md  optimizer-math.md  optimizer.md  optimizer_mathematical_formulation.md  roadmap.md  todo.md
examples/: matchup_demo.py  pipeline_demo.py
experiments/: validate_invariants.py  validate_offense.py  validate_pruning.py  validate_submodularity.py  validate_two_axis.py
nightreign/: __main__.py  cli.py
nightreign/datagen/: accessories.py  animations.py  art.py  characters.py  effects.py  goods.py  icons.py  magic.py  motion_values.py  nightlords.py  npcs.py  params.py  reference.py  relics.py  scaling.py  sword_arts.py  vessels.py  weapon_affixes.py  weapons.py
nightreign/engine/: attack_rating.py  damage.py  effects.py  sources.py
nightreign/io/: archive.py  atlas.py  bxf.py  dcx.py  paramdef.py  regulation.py  savefile.py  tae.py  tpf.py
nightreign/optimize/: affixes.py  (+7 more)
tests/: test_attack_rating.py  test_datagen_sources.py  test_golden_master.py  test_kits.py  test_optimizer.py  test_sources.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+51 files in other folders)
